# ModuleSDK

./: CMakeLists.txt  README.md  sqlibapi.cpp  sqmodapi.cpp  sqrat.cpp
include/: sqaddon.h  sqlibapi.h  sqmodapi.h  sqrat.h
include/sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratClassType.h  sqratConst.h  sqratFunction.h  sqratGlobalMethods.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h
sqrat/: README.md
squirrel/: CMakeLists.txt
squirrel/include/: squirrel.h  squirrelex.h
